[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "submark"
author = "Brian Okken"
author-email = ""
description-file = "README.md"
home-page = "https://github.com/okken/submark"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "pytest-cov", "tox"]

[tool.flit.scripts]
submark = "submark:main"
